try to add in more known coinbase wallets
